fix for misaligned icon in download popup

--- a/chrome/popup/popup.css
+++ b/chrome/popup/popup.css
@@ -147,7 +147,7 @@ scrollbox[orient=vertical] /* >=71 */ {
 /* this is a bit depressing... */
 /* work around lack of ::part selector support */
 :root {
-    --scrollbutton-display: flex !important;
+    --scrollbutton-display: -moz-box !important;
 }
 
 /* hide ancient-looking scrollbuttons in menupopups */
@@ -341,7 +341,7 @@ panelview .toolbarbutton-1,
 }
 
 :root[fxastatus="signedin"] #appMenu-fxa-label > .toolbarbutton-icon {
-    display: flex !important;
+    display: -moz-box !important;
     border-radius: 99px !important;
     padding: 2px !important;
 }
@@ -412,7 +412,7 @@ panelmultiview .toolbaritem-combined-buttons > spacer.after-label {
 
 #tracking-protection-preferences-button > .toolbarbutton-text {
     padding-inline-end: 4px !important;
-    order: 0 !important;
+    -moz-box-ordinal-group: 0 !important;
 }
 
 .identity-popup-section {
@@ -433,8 +433,8 @@ panelmultiview .toolbaritem-combined-buttons > spacer.after-label {
     width: 32px !important;
     max-height: 32px !important;
     margin-inline-start: auto !important;
-    justify-content: center !important;
-    align-items: center !important;
+    -moz-box-pack: center !important;
+    -moz-box-align: center !important;
     background-image: none !important;
 }
 
@@ -462,7 +462,7 @@ panelmultiview .toolbaritem-combined-buttons > spacer.after-label {
 }
 
 #identity-popup-mainView-panel-header {
-    align-items: start !important;
+    -moz-box-align: start !important;
     padding: 16px !important;
 }
 
@@ -709,7 +709,6 @@ panelmultiview .toolbaritem-combined-buttons > spacer.after-label {
     min-width: 32px !important;
     fill: currentColor !important;
     -moz-context-properties: fill, fill-opacity !important;
-    display: block !important;
 }
 
 #downloadsListBox .downloadButton .button-box {
@@ -764,7 +763,7 @@ panelmultiview .toolbaritem-combined-buttons > spacer.after-label {
     content: url(checkmark.svg) !important;
     -moz-context-properties: fill, fill-opacity !important;
     fill: currentColor !important;
-    display: flex !important;
+    display: -moz-box !important;
     width: 18px !important;
     height: 18px !important;
     margin-inline-start: 16px !important;
